--- a/HW/HW2/keren_rest.ipynb
+++ b/HW/HW2/keren_rest.ipynb
@@ -33,65 +33,209 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hidden_dim=32 | activation=Tanh() | num_layers=3\n",
+      "hidden_dim=64 | activation=Tanh() | num_layers=1\n",
       "No GPU available, training on CPU.\n",
-      "Batch: 1/107 | Batch Loss: 0.673 | Train Accuracy: 0.956 | Train F1: nan\n",
-      "Batch: 101/107 | Batch Loss: 0.362 | Train Accuracy: 0.950 | Train F1: nan\n",
-      "Epoch: 1/10 | Train Avg Loss: 0.406 | Train Accuracy: 0.950 | Train F1: nan\n",
-      "Val Accuracy: 0.903 | Val F1: nan\n",
+      "Batch: 1/107 | Batch Loss: 0.698 | Train Accuracy: 0.469 | Train F1: 0.093\n",
+      "Batch: 101/107 | Batch Loss: 0.378 | Train Accuracy: 0.944 | Train F1: 0.009\n",
+      "Epoch: 1/20 | Train Avg Loss: 0.395 | Train Accuracy: 0.944 | Train F1: 0.008\n",
+      "[[5.9214e+04 3.5600e+02]\n",
+      " [3.1450e+03 1.5000e+01]]\n",
+      "Val Accuracy: 0.905 | Val F1: nan\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kerengruteke/projects/NLP_course/HW/HW2/utils.py:14: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  precision = Tp / (Tp + Fp)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Val Accuracy: 0.921 | Val F1: nan\n",
-      "Batch: 1/107 | Batch Loss: 0.378 | Train Accuracy: 0.936 | Train F1: nan\n",
-      "Batch: 101/107 | Batch Loss: 0.352 | Train Accuracy: 0.950 | Train F1: nan\n",
-      "Epoch: 2/10 | Train Avg Loss: 0.364 | Train Accuracy: 0.950 | Train F1: nan\n",
-      "Val Accuracy: 0.927 | Val F1: nan\n",
-      "Val Accuracy: 0.921 | Val F1: nan\n",
-      "Batch: 1/107 | Batch Loss: 0.367 | Train Accuracy: 0.946 | Train F1: nan\n",
-      "Batch: 101/107 | Batch Loss: 0.347 | Train Accuracy: 0.950 | Train F1: nan\n",
-      "Epoch: 3/10 | Train Avg Loss: 0.364 | Train Accuracy: 0.950 | Train F1: nan\n",
-      "Val Accuracy: 0.942 | Val F1: nan\n",
-      "Val Accuracy: 0.921 | Val F1: nan\n",
-      "Batch: 1/107 | Batch Loss: 0.356 | Train Accuracy: 0.958 | Train F1: nan\n",
-      "Batch: 101/107 | Batch Loss: 0.380 | Train Accuracy: 0.950 | Train F1: nan\n",
-      "Epoch: 4/10 | Train Avg Loss: 0.363 | Train Accuracy: 0.950 | Train F1: nan\n",
-      "Val Accuracy: 0.913 | Val F1: nan\n",
-      "Val Accuracy: 0.921 | Val F1: nan\n",
-      "Batch: 1/107 | Batch Loss: 0.359 | Train Accuracy: 0.954 | Train F1: nan\n",
-      "Batch: 101/107 | Batch Loss: 0.366 | Train Accuracy: 0.950 | Train F1: nan\n",
-      "Epoch: 5/10 | Train Avg Loss: 0.364 | Train Accuracy: 0.950 | Train F1: nan\n",
-      "Val Accuracy: 0.949 | Val F1: nan\n",
-      "Val Accuracy: 0.921 | Val F1: nan\n",
-      "Batch: 1/107 | Batch Loss: 0.388 | Train Accuracy: 0.926 | Train F1: nan\n",
-      "Batch: 101/107 | Batch Loss: 0.399 | Train Accuracy: 0.950 | Train F1: nan\n",
-      "Epoch: 6/10 | Train Avg Loss: 0.363 | Train Accuracy: 0.950 | Train F1: nan\n",
-      "Val Accuracy: 0.907 | Val F1: nan\n",
-      "Val Accuracy: 0.921 | Val F1: nan\n",
-      "Batch: 1/107 | Batch Loss: 0.361 | Train Accuracy: 0.952 | Train F1: nan\n",
-      "Batch: 101/107 | Batch Loss: 0.391 | Train Accuracy: 0.950 | Train F1: nan\n",
-      "Epoch: 7/10 | Train Avg Loss: 0.363 | Train Accuracy: 0.950 | Train F1: nan\n",
+      "[[14483.     0.]\n",
+      " [ 1250.     0.]]\n",
+      "Batch: 1/107 | Batch Loss: 0.361 | Train Accuracy: 0.953 | Train F1: nan\n",
+      "Batch: 101/107 | Batch Loss: 0.350 | Train Accuracy: 0.949 | Train F1: nan\n",
+      "Epoch: 2/20 | Train Avg Loss: 0.364 | Train Accuracy: 0.950 | Train F1: nan\n",
+      "[[59570.     0.]\n",
+      " [ 3160.     0.]]\n",
       "Val Accuracy: 0.930 | Val F1: nan\n",
       "Val Accuracy: 0.921 | Val F1: nan\n",
+      "[[14483.     0.]\n",
+      " [ 1250.     0.]]\n",
+      "Batch: 1/107 | Batch Loss: 0.347 | Train Accuracy: 0.967 | Train F1: nan\n",
+      "Batch: 101/107 | Batch Loss: 0.367 | Train Accuracy: 0.950 | Train F1: nan\n",
+      "Epoch: 3/20 | Train Avg Loss: 0.364 | Train Accuracy: 0.950 | Train F1: nan\n",
+      "[[59570.     0.]\n",
+      " [ 3160.     0.]]\n",
+      "Val Accuracy: 0.956 | Val F1: nan\n",
+      "Val Accuracy: 0.921 | Val F1: nan\n",
+      "[[14483.     0.]\n",
+      " [ 1250.     0.]]\n",
+      "Batch: 1/107 | Batch Loss: 0.364 | Train Accuracy: 0.950 | Train F1: nan\n",
+      "Batch: 101/107 | Batch Loss: 0.347 | Train Accuracy: 0.949 | Train F1: nan\n",
+      "Epoch: 4/20 | Train Avg Loss: 0.364 | Train Accuracy: 0.950 | Train F1: nan\n",
+      "[[59570.     0.]\n",
+      " [ 3160.     0.]]\n",
+      "Val Accuracy: 0.919 | Val F1: nan\n",
+      "Val Accuracy: 0.921 | Val F1: nan\n",
+      "[[14483.     0.]\n",
+      " [ 1250.     0.]]\n",
+      "Batch: 1/107 | Batch Loss: 0.376 | Train Accuracy: 0.937 | Train F1: nan\n",
+      "Batch: 101/107 | Batch Loss: 0.371 | Train Accuracy: 0.950 | Train F1: nan\n",
+      "Epoch: 5/20 | Train Avg Loss: 0.365 | Train Accuracy: 0.950 | Train F1: nan\n",
+      "[[59570.     0.]\n",
+      " [ 3160.     0.]]\n",
+      "Val Accuracy: 0.925 | Val F1: nan\n",
+      "Val Accuracy: 0.921 | Val F1: nan\n",
+      "[[14483.     0.]\n",
+      " [ 1250.     0.]]\n",
+      "Batch: 1/107 | Batch Loss: 0.404 | Train Accuracy: 0.910 | Train F1: nan\n",
+      "Batch: 101/107 | Batch Loss: 0.359 | Train Accuracy: 0.950 | Train F1: nan\n",
+      "Epoch: 6/20 | Train Avg Loss: 0.363 | Train Accuracy: 0.950 | Train F1: nan\n",
+      "[[59570.     0.]\n",
+      " [ 3160.     0.]]\n",
+      "Val Accuracy: 0.921 | Val F1: nan\n",
+      "Val Accuracy: 0.921 | Val F1: nan\n",
+      "[[14483.     0.]\n",
+      " [ 1250.     0.]]\n",
+      "Batch: 1/107 | Batch Loss: 0.353 | Train Accuracy: 0.960 | Train F1: nan\n",
+      "Batch: 101/107 | Batch Loss: 0.348 | Train Accuracy: 0.950 | Train F1: nan\n",
+      "Epoch: 7/20 | Train Avg Loss: 0.364 | Train Accuracy: 0.950 | Train F1: nan\n",
+      "[[59570.     0.]\n",
+      " [ 3160.     0.]]\n",
+      "Val Accuracy: 0.928 | Val F1: nan\n",
+      "Val Accuracy: 0.921 | Val F1: nan\n",
+      "[[14483.     0.]\n",
+      " [ 1250.     0.]]\n",
+      "Batch: 1/107 | Batch Loss: 0.363 | Train Accuracy: 0.950 | Train F1: nan\n",
+      "Batch: 101/107 | Batch Loss: 0.331 | Train Accuracy: 0.950 | Train F1: nan\n",
+      "Epoch: 8/20 | Train Avg Loss: 0.364 | Train Accuracy: 0.950 | Train F1: nan\n",
+      "[[59570.     0.]\n",
+      " [ 3160.     0.]]\n",
+      "Val Accuracy: 0.912 | Val F1: nan\n",
+      "Val Accuracy: 0.921 | Val F1: nan\n",
+      "[[14483.     0.]\n",
+      " [ 1250.     0.]]\n",
+      "Batch: 1/107 | Batch Loss: 0.362 | Train Accuracy: 0.951 | Train F1: nan\n",
+      "Batch: 101/107 | Batch Loss: 0.368 | Train Accuracy: 0.949 | Train F1: 0.001\n",
+      "Epoch: 9/20 | Train Avg Loss: 0.363 | Train Accuracy: 0.950 | Train F1: 0.001\n",
+      "[[5.957e+04 0.000e+00]\n",
+      " [3.159e+03 1.000e+00]]\n",
+      "Val Accuracy: 0.904 | Val F1: nan\n",
+      "Val Accuracy: 0.921 | Val F1: nan\n",
+      "[[14483.     0.]\n",
+      " [ 1250.     0.]]\n",
+      "Batch: 1/107 | Batch Loss: 0.351 | Train Accuracy: 0.963 | Train F1: nan\n",
+      "Batch: 101/107 | Batch Loss: 0.357 | Train Accuracy: 0.949 | Train F1: 0.001\n",
+      "Epoch: 10/20 | Train Avg Loss: 0.363 | Train Accuracy: 0.950 | Train F1: 0.001\n",
+      "[[5.957e+04 0.000e+00]\n",
+      " [3.158e+03 2.000e+00]]\n",
+      "Val Accuracy: 0.934 | Val F1: nan\n",
+      "Val Accuracy: 0.921 | Val F1: nan\n",
+      "[[14483.     0.]\n",
+      " [ 1250.     0.]]\n",
+      "Batch: 1/107 | Batch Loss: 0.378 | Train Accuracy: 0.935 | Train F1: nan\n",
+      "Batch: 101/107 | Batch Loss: 0.362 | Train Accuracy: 0.950 | Train F1: 0.001\n",
+      "Epoch: 11/20 | Train Avg Loss: 0.363 | Train Accuracy: 0.950 | Train F1: 0.001\n",
+      "[[5.957e+04 0.000e+00]\n",
+      " [3.158e+03 2.000e+00]]\n",
+      "Val Accuracy: 0.924 | Val F1: nan\n",
+      "Val Accuracy: 0.921 | Val F1: 0.002\n",
+      "[[1.4483e+04 0.0000e+00]\n",
+      " [1.2490e+03 1.0000e+00]]\n",
+      "Batch: 1/107 | Batch Loss: 0.368 | Train Accuracy: 0.945 | Train F1: nan\n",
+      "Batch: 101/107 | Batch Loss: 0.348 | Train Accuracy: 0.949 | Train F1: 0.001\n",
+      "Epoch: 12/20 | Train Avg Loss: 0.364 | Train Accuracy: 0.950 | Train F1: 0.001\n",
+      "[[5.957e+04 0.000e+00]\n",
+      " [3.158e+03 2.000e+00]]\n",
+      "Val Accuracy: 0.926 | Val F1: nan\n",
+      "Val Accuracy: 0.921 | Val F1: 0.002\n",
+      "[[1.4483e+04 0.0000e+00]\n",
+      " [1.2490e+03 1.0000e+00]]\n",
+      "Batch: 1/107 | Batch Loss: 0.376 | Train Accuracy: 0.938 | Train F1: nan\n",
+      "Batch: 101/107 | Batch Loss: 0.348 | Train Accuracy: 0.950 | Train F1: 0.001\n",
+      "Epoch: 13/20 | Train Avg Loss: 0.364 | Train Accuracy: 0.950 | Train F1: 0.001\n",
+      "[[5.957e+04 0.000e+00]\n",
+      " [3.158e+03 2.000e+00]]\n",
+      "Val Accuracy: 0.933 | Val F1: nan\n",
+      "Val Accuracy: 0.921 | Val F1: 0.002\n",
+      "[[1.4483e+04 0.0000e+00]\n",
+      " [1.2490e+03 1.0000e+00]]\n",
+      "Batch: 1/107 | Batch Loss: 0.371 | Train Accuracy: 0.942 | Train F1: nan\n",
+      "Batch: 101/107 | Batch Loss: 0.360 | Train Accuracy: 0.950 | Train F1: 0.001\n",
+      "Epoch: 14/20 | Train Avg Loss: 0.364 | Train Accuracy: 0.950 | Train F1: 0.001\n",
+      "[[5.957e+04 0.000e+00]\n",
+      " [3.158e+03 2.000e+00]]\n",
+      "Val Accuracy: 0.931 | Val F1: nan\n",
+      "Val Accuracy: 0.921 | Val F1: 0.002\n",
+      "[[1.4483e+04 0.0000e+00]\n",
+      " [1.2490e+03 1.0000e+00]]\n",
+      "Batch: 1/107 | Batch Loss: 0.385 | Train Accuracy: 0.929 | Train F1: nan\n",
+      "Batch: 101/107 | Batch Loss: 0.358 | Train Accuracy: 0.950 | Train F1: 0.001\n",
+      "Epoch: 15/20 | Train Avg Loss: 0.364 | Train Accuracy: 0.950 | Train F1: 0.001\n",
+      "[[5.957e+04 0.000e+00]\n",
+      " [3.158e+03 2.000e+00]]\n",
+      "Val Accuracy: 0.934 | Val F1: nan\n",
+      "Val Accuracy: 0.921 | Val F1: 0.003\n",
+      "[[1.4483e+04 0.0000e+00]\n",
+      " [1.2480e+03 2.0000e+00]]\n",
       "Batch: 1/107 | Batch Loss: 0.360 | Train Accuracy: 0.953 | Train F1: nan\n",
-      "Batch: 101/107 | Batch Loss: 0.350 | Train Accuracy: 0.950 | Train F1: nan\n",
-      "Epoch: 8/10 | Train Avg Loss: 0.363 | Train Accuracy: 0.950 | Train F1: nan\n",
-      "Val Accuracy: 0.923 | Val F1: nan\n",
-      "Val Accuracy: 0.921 | Val F1: nan\n",
-      "Batch: 1/107 | Batch Loss: 0.355 | Train Accuracy: 0.958 | Train F1: nan\n",
-      "Batch: 101/107 | Batch Loss: 0.363 | Train Accuracy: 0.949 | Train F1: nan\n",
-      "Epoch: 9/10 | Train Avg Loss: 0.364 | Train Accuracy: 0.950 | Train F1: nan\n",
-      "Val Accuracy: 0.906 | Val F1: nan\n",
-      "Val Accuracy: 0.921 | Val F1: nan\n",
-      "Batch: 1/107 | Batch Loss: 0.364 | Train Accuracy: 0.949 | Train F1: nan\n",
-      "Batch: 101/107 | Batch Loss: 0.375 | Train Accuracy: 0.950 | Train F1: nan\n",
-      "Epoch: 10/10 | Train Avg Loss: 0.363 | Train Accuracy: 0.950 | Train F1: nan\n",
-      "Val Accuracy: 0.896 | Val F1: nan\n",
-      "Val Accuracy: 0.921 | Val F1: nan\n"
+      "Batch: 101/107 | Batch Loss: 0.364 | Train Accuracy: 0.950 | Train F1: 0.001\n",
+      "Epoch: 16/20 | Train Avg Loss: 0.365 | Train Accuracy: 0.950 | Train F1: 0.001\n",
+      "[[5.957e+04 0.000e+00]\n",
+      " [3.158e+03 2.000e+00]]\n",
+      "Val Accuracy: 0.908 | Val F1: nan\n",
+      "Val Accuracy: 0.921 | Val F1: 0.003\n",
+      "[[1.4483e+04 0.0000e+00]\n",
+      " [1.2480e+03 2.0000e+00]]\n",
+      "Batch: 1/107 | Batch Loss: 0.368 | Train Accuracy: 0.945 | Train F1: nan\n",
+      "Batch: 101/107 | Batch Loss: 0.376 | Train Accuracy: 0.950 | Train F1: 0.001\n",
+      "Epoch: 17/20 | Train Avg Loss: 0.363 | Train Accuracy: 0.950 | Train F1: 0.001\n",
+      "[[5.957e+04 0.000e+00]\n",
+      " [3.158e+03 2.000e+00]]\n",
+      "Val Accuracy: 0.937 | Val F1: nan\n",
+      "Val Accuracy: 0.921 | Val F1: 0.005\n",
+      "[[1.4483e+04 0.0000e+00]\n",
+      " [1.2470e+03 3.0000e+00]]\n",
+      "Batch: 1/107 | Batch Loss: 0.373 | Train Accuracy: 0.940 | Train F1: nan\n",
+      "Batch: 101/107 | Batch Loss: 0.340 | Train Accuracy: 0.950 | Train F1: 0.001\n",
+      "Epoch: 18/20 | Train Avg Loss: 0.364 | Train Accuracy: 0.950 | Train F1: 0.001\n",
+      "[[5.957e+04 0.000e+00]\n",
+      " [3.158e+03 2.000e+00]]\n",
+      "Val Accuracy: 0.913 | Val F1: nan\n",
+      "Val Accuracy: 0.921 | Val F1: 0.006\n",
+      "[[1.4483e+04 0.0000e+00]\n",
+      " [1.2460e+03 4.0000e+00]]\n",
+      "Batch: 1/107 | Batch Loss: 0.350 | Train Accuracy: 0.964 | Train F1: nan\n",
+      "Batch: 101/107 | Batch Loss: 0.353 | Train Accuracy: 0.950 | Train F1: nan\n",
+      "Epoch: 19/20 | Train Avg Loss: 0.363 | Train Accuracy: 0.950 | Train F1: 0.001\n",
+      "[[5.957e+04 0.000e+00]\n",
+      " [3.158e+03 2.000e+00]]\n",
+      "Val Accuracy: 0.916 | Val F1: nan\n",
+      "Val Accuracy: 0.921 | Val F1: 0.008\n",
+      "[[1.4482e+04 1.0000e+00]\n",
+      " [1.2450e+03 5.0000e+00]]\n",
+      "Batch: 1/107 | Batch Loss: 0.368 | Train Accuracy: 0.945 | Train F1: nan\n",
+      "Batch: 101/107 | Batch Loss: 0.333 | Train Accuracy: 0.949 | Train F1: 0.001\n",
+      "Epoch: 20/20 | Train Avg Loss: 0.363 | Train Accuracy: 0.950 | Train F1: 0.001\n",
+      "[[5.957e+04 0.000e+00]\n",
+      " [3.158e+03 2.000e+00]]\n",
+      "Val Accuracy: 0.904 | Val F1: nan\n",
+      "Val Accuracy: 0.921 | Val F1: 0.010\n",
+      "[[1.4482e+04 1.0000e+00]\n",
+      " [1.2440e+03 6.0000e+00]]\n"
      ]
     }
    ],
@@ -100,15 +244,15 @@
     "import torch.nn as nn\n",
     "\n",
     "num_classes = 2\n",
-    "num_epochs = 10\n",
+    "num_epochs = 20\n",
     "embedding_dim = NER_dataset.VEC_DIM\n",
     "lr = 0.001\n",
     "\n",
-    "hidden_dim = 32\n",
+    "hidden_dim = 64\n",
     "# activation = nn.ReLU()\n",
     "# activation = nn.Sigmoid()\n",
     "activation = nn.Tanh()\n",
-    "num_layers = 3\n",
+    "num_layers = 1\n",
     "\n",
     "model_save_path = (\n",
     "    f\"LSTM_model_stateDict_batchSize_{batch_size}_hidden_{hidden_dim}_lr_{lr}.pt\"\n",
