--- a/HW/HW2/testing.ipynb
+++ b/HW/HW2/testing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from tqdm import tqdm, trange\n",
-    "from preprocessing import EmbeddingDataset\n",
+    "from preprocessing import SentencesEmbeddingDataset\n",
     "from model2_nn import train_and_plot\n",
     "from torch.nn.utils import rnn"
    ]
@@ -36,12 +36,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "prepering glove...\n"
+      "preparing embedding...\n"
      ]
     }
    ],
    "source": [
-    "ds = EmbeddingDataset()\n",
+    "ds = SentencesEmbeddingDataset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 32\n",
     "train_dataloader, test_dataloader = ds.get_data_loaders(batch_size=64)"
    ]
   },
@@ -1356,7 +1365,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.14 64-bit",
+   "display_name": "Python 3.9.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1370,11 +1379,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.14"
+   "version": "3.9.2"
   },
   "vscode": {
    "interpreter": {
-    "hash": "5b6e8fba36db23bc4d54e0302cd75fdd75c29d9edcbab68d6cfc74e7e4b30305"
+    "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
    }
   }
  },
